# brain-agent-v2

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  COMPLETION.md  IMPROVEMENT_PLAN.md  Makefile  README.md  STATUS.md  __init__.py  config.example.yaml  main.py  pyproject.toml  spec_2.md
.github/workflows/: lint.yml  test.yml
benchmarks/: __init__.py  export_raft_data.py  procedure_test.py  recall_test.py  reranker_eval.py
core/: __init__.py  agent.py  config.py  prompts.py
core/context/: __init__.py  assembler.py  compressor.py
core/llm/: __init__.py  _run_tests.py  _test_runner.py  embeddings.py  provider.py  tool_parser.py
core/memory/: __init__.py  consolidation.py  database.py  documents.py  dream.py  feedback.py  kg.py  procedures.py  reader.py  reasoning.py  reranker.py  writer.py
core/tools/: __init__.py  bash.py  executor.py  file_ops.py  ingest.py  teach.py  web_search.py
core/utils/: __init__.py  logging.py  retry.py
docs/: README.md  architecture.md  benchmarks.md  extension-guide.md  memory-system.md  retrieval-pipeline.md  setup.md  testing.md  token-budget.md  troubleshooting.md
server/: __init__.py  mcp_server.py
tests/: __init__.py  conftest.py  test_adaptive_retrieval.py  test_compressor.py  test_config.py  test_consolidation.py  test_context_assembly.py  test_context_stress.py  test_database_extras.py  test_documents.py  test_dream.py  test_embeddings.py  test_executor.py  test_feedback.py  test_integration.py  test_kg.py  test_mcp_server.py  test_memory_links.py  test_memory_read.py  test_memory_write.py  test_phase3.py  test_procedures.py  test_reasoning.py  test_reranker.py  test_tool_parser.py  test_tui.py  test_writer.py
tui/: __init__.py  app.py  events.py  panels.py
