[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-agent"
version = "2.0.0"
requires-python = ">=3.11"
description = "Memory-first AI agent: 4B model + exceptional memory system"
dependencies = [
    "requests",
    "google-genai>=1.0",
    "sqlite-vec>=0.1.6",
    "tiktoken",
    "pydantic>=2.0",
    "textual>=0.80",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn",
    "numpy",
]
reranker = [
    "sentence-transformers",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-timeout",
]

[project.scripts]
brain-agent = "brain_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["brain_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
