[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-agent"
version = "2.0.0"
requires-python = ">=3.11"
description = "Memory-first AI agent: 4B model + exceptional memory system"
dependencies = [
    "requests",
    "google-genai>=1.0",
    "sqlite-vec>=0.1.6",
    "tiktoken",
    "pydantic>=2.0",
    "textual>=0.80",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn",
    "numpy",
]
reranker = [
    "sentence-transformers",
]
server = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-timeout",
]

[project.scripts]
brain-agent = "brain_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["brain_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # Line length handled by formatter
    "B008",  # Do not perform function call in argument defaults (common in dataclasses)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "tui", "server", "benchmarks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
